--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script>
 //Example of a jquery Call
 $.get( "getSoap.php?FirstName=Example&LastName=Example", function( data ) {
